<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/fondo">

    <TextView
        android:id="@+id/textHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ubicacion"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="8dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etBuscar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Buscar..."
            android:minHeight="48dp"
            android:paddingLeft="60dp"
            android:background="@drawable/edittext_border"/>

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="start|center_vertical"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/search"
            android:gravity="center"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textAllCaps="false" />

    </FrameLayout>

    <Button
        android:id="@+id/btnAlertaExtrema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ACCAUTMOV"
        android:textAllCaps="false"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="14dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button_background"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnUrgente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FRACTNASMAND"
        android:textAllCaps="false"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="8dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button_background1"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnGrave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LACPINOSAN"
        android:textAllCaps="false"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="14dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button_background2"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnLeve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IRRITVISUPOLV"
        android:textAllCaps="false"
        android:gravity="center"
        android:padding="16dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button_background3"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnUrgente1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SANGMODPERS"
        android:textAllCaps="false"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="8dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button_background1"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnGrave1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CONTLEVRAS"
        android:textAllCaps="false"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="14dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button_background2"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnAlertaExtrema1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AMPTREXT"
        android:textAllCaps="false"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="18dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button_background"
        android:layout_marginTop="8dp" />

    <View
        android:id="@+id/home"
        android:layout_width="65dp"
        android:layout_height="62dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/home" />

</LinearLayout>
